--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -47,6 +47,9 @@
               display: flex 
               flex-direction: column
               align-items: flex-end
+              &__btn
+                display: flex
+                width: 100%
               button 
                 margin-top: 1.25em
             @include phone-large
