--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -4,6 +4,8 @@
     // height: 425px
     // overflow: hidden
     border-bottom: 1px solid $accent
+    @include tablet-phone 
+      height: 100vh
     .page__section
       height: 100%
     &__col
@@ -20,15 +22,29 @@
             height: 100%
             @include phone-large
                 width: 100%
-            &__gatimage
-              // display: none
+            @include tablet-phone 
+              height: 50%
+              width: 100%
+              // background: lightgreen
+            &__image
+              // background: orange 
               height: 100%
-              max-height: 100%
-                // height: 250px
-                // img
-                    // max-height: 250px
-                // max-width: 100%
-                // width: calc(100% - 50vh)
+              // max-height: 100%
+              width: 100%
+              &__container
+                // display: none
+                width: auto
+                height: 100%
+                .gatsby-image-wrapper
+                  height: auto
+                  width: 100%
+                img 
+                  height: 100%
+                  // height: 250px
+                  // img
+                      // max-height: 250px
+                  // max-width: 100%
+                  // width: calc(100% - 50vh)
         &__two
             display: flex
             flex-direction: column
@@ -40,6 +56,10 @@
             padding: 3em 0em
             // background: seagreen
             // justify-content: space-between
+            @include tablet-phone 
+              height: 50%
+              // background: teal
+              width: 100%
             &__top
               h2 
                 margin-top: -10px
