--- a/src/components/layout/header.sass
+++ b/src/components/layout/header.sass
@@ -13,11 +13,13 @@
     color: black
     display: flex
     align-items: center
-    padding: 15px 0
+    padding: 12px 0
     justify-content: space-between
     width: 100vw
     @include navsnap
         padding: 10px 0
+    @include tablet-phone 
+      padding: 15px 0px
     &__title
         width: 32%
         display: flex
@@ -25,11 +27,13 @@
     h1
         width: 100%
         .image
-            width: 260px 
+            width: 230px 
             height: auto
+            @include tablet-phone 
+              width: 200px
     &__logo
         // background: teal
-        width: 4.5%
+        width: 5%
         height: 100%
         @media(max-width: 1000px)
             display: none
