--- a/src/components/background_banner/background_banner.sass
+++ b/src/components/background_banner/background_banner.sass
@@ -32,6 +32,8 @@
                 max-height: 100%
                 // background: yellow
                 position: relative
+                @include tablet-phone 
+                  
                 .gatsby-image-wrapper
                   position: relative !important 
                   margin: 0 auto
